<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>com.kartaguez.pocoma</groupId>
	<artifactId>pocoma</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>pocoma</name>
	<description/>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>

	<modules>
		<module>domain-pot</module>
		<module>domain-projection-balance</module>
		<module>domain-pipeline</module>
		<module>domain-task</module>
		<module>domain-pot-policy</module>
		<module>domain-consumption</module>
		<module>engine-core</module>
		<module>engine-execution-guard</module>
		<module>engine-consumption</module>
		<module>engine-processing-command</module>
		<module>engine-processing-event</module>
		<module>engine-processing-task</module>
		<module>engine-command</module>
		<module>engine-query</module>
		<module>engine-projection</module>
		<module>engine-task-materialization</module>
		<module>engine-task-creation</module>
		<module>engine-task-execution</module>
		<module>observability</module>
		<module>infra-tx-spring</module>
		<module>infra-event-publisher-spring</module>
		<module>infra-persistence-jpa</module>
		<module>orchestrator-claimable-work-dispatcher</module>
		<module>supra-worker-command</module>
		<module>supra-worker-event</module>
		<module>supra-worker-task</module>
		<module>shared-supra-dispatcher-projection</module>
		<module>supra-dispatcher-business-events-outbox-nats</module>
		<module>supra-dispatcher-task-materialization-nats</module>
		<module>supra-dispatcher-pipeline-tasks</module>
		<module>supra-dispatcher-balance-calculation-tasks-outbox-nats</module>
		<module>supra-worker-balance-calculation-events-spring</module>
		<module>supra-http-rest-spring</module>
		<module>shared-runtime-spring-config</module>
		<module>runtime-web-api</module>
		<module>runtime-business-events-outbox-dispatcher</module>
		<module>runtime-task-materialization-dispatcher</module>
		<module>runtime-pipeline-task-executor</module>
		<module>runtime-balance-calculation-tasks-dispatcher</module>
		<module>runtime-monolith</module>
		<module>architecture-tests</module>
	</modules>

	<properties>
		<java.version>21</java.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
